--- a/application.yml
+++ b/application.yml
@@ -6,6 +6,14 @@ server:
   servlet:
     context-path: /api/vendor
 spring:
+  cloud:
+    stream:
+      bindings:
+        convertToUppercase-in-0:
+          destination: values-topic
+          group: processor
+        convertToUppercase-out-0:
+          destination: uppercase-values-topic
   application:
     name: vendor-microservice
   data:
